# loganalyzer

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  README.md  appveyor.yml  shell.nix
.github/: ISSUE_TEMPLATE
.github/workflows/: c-cpp.yml  stale.yml
build-systems/: build-all.sh
build-systems/obs/: PKGBUILD  build-for-obs.sh  loganalyzer.dsc  loganalyzer.spec  loganalyzer.spec.new
build-systems/snap/: build-for-launchpad-snap.sh  build-for-local-snap.sh
build-systems/snap/snapcraft/: README.md  snapcraft.yaml
build-systems/travis/: create-dmg.sh
build-systems/ubuntu-launchpad/: build-for-launchpad.sh
snap/: snapcraft.yaml
snap/gui/: loganalyzer-pbek.desktop
src/: CMakeLists.txt  LogAnalyzer.desktop  LogAnalyzer.icns  LogAnalyzer.pro  LogAnalyzer.rc  loganalyzer.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  media.qrc  qtexteditsearchwidget.cpp  qtexteditsearchwidget.h  version.h
src/debian/: control  copyright  loganalyzer.install
src/dialogs/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/entities/: logfilesource.cpp  logfilesource.h
src/services/: databaseservice.cpp  ezpublishservice.cpp  ezpublishservice.h
src/utils/: misc.cpp  misc.h
